PracticaCompiladors/cl/ExprParser.py
# Generated from Expr.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'*'", "'#'", "'!'", "':='", "'inside'", 
                     "'print'", "'color'", "'perimeter'", "'vertices'", 
                     "'centroid'", "'area'", "'equal'", "'draw'", "'{'", 
                     "'}'", "'('", "')'", "'['", "']'", "','", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'\n'" ]

    symbolicNames = [ "<INVALID>", "UNION", "INTERSECTION", "BOUNDINGBOX", 
                      "POLI", "ASSIGN", "INSIDE", "PRINT", "COLOR", "PERIMETER", 
                      "VERTICES", "CENTROID", "AREA", "EQUAL", "DRAW", "COLORSTART", 
                      "COLOREND", "PRIORITYOP", "PRIORITYEND", "LISTSTART", 
                      "LISTEND", "COMA", "TXT", "INT", "FLOAT", "ENDLINE", 
                      "ID", "WHITE", "COMENTARI" ]

    RULE_root = 0
    RULE_expresiopoligon = 1
    RULE_vertexdef = 2
    RULE_listvertexs = 3
    RULE_newpoly = 4
    RULE_assigncolor = 5
    RULE_operaciopoligonsimple = 6
    RULE_printtxt = 7
    RULE_operadorspoligons = 8
    RULE_operadorspoligons2 = 9
    RULE_colorvalues = 10
    RULE_poligonID = 11

    ruleNames =  [ "root", "expresiopoligon", "vertexdef", "listvertexs", 
                   "newpoly", "assigncolor", "operaciopoligonsimple", "printtxt", 
                   "operadorspoligons", "operadorspoligons2", "colorvalues", 
                   "poligonID" ]

    EOF = Token.EOF
    UNION=1
    INTERSECTION=2
    BOUNDINGBOX=3
    POLI=4
    ASSIGN=5
    INSIDE=6
    PRINT=7
    COLOR=8
    PERIMETER=9
    VERTICES=10
    CENTROID=11
    AREA=12
    EQUAL=13
    DRAW=14
    COLORSTART=15
    COLOREND=16
    PRIORITYOP=17
    PRIORITYEND=18
    LISTSTART=19
    LISTEND=20
    COMA=21
    TXT=22
    INT=23
    FLOAT=24
    ENDLINE=25
    ID=26
    WHITE=27
    COMENTARI=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assigncolor(self):
            return self.getTypedRuleContext(ExprParser.AssigncolorContext,0)


        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def expresiopoligon(self):
            return self.getTypedRuleContext(ExprParser.ExpresiopoligonContext,0)


        def operaciopoligonsimple(self):
            return self.getTypedRuleContext(ExprParser.OperaciopoligonsimpleContext,0)


        def operadorspoligons(self):
            return self.getTypedRuleContext(ExprParser.OperadorspoligonsContext,0)


        def newpoly(self):
            return self.getTypedRuleContext(ExprParser.NewpolyContext,0)


        def printtxt(self):
            return self.getTypedRuleContext(ExprParser.PrinttxtContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = ExprParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.state = 43
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 24
                self.assigncolor()
                self.state = 25
                self.match(ExprParser.EOF)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 27
                self.expresiopoligon()
                self.state = 28
                self.match(ExprParser.EOF)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 30
                self.operaciopoligonsimple()
                self.state = 31
                self.match(ExprParser.EOF)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 33
                self.operadorspoligons()
                self.state = 34
                self.match(ExprParser.EOF)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 36
                self.newpoly()
                self.state = 37
                self.match(ExprParser.EOF)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 39
                self.printtxt()
                self.state = 40
                self.match(ExprParser.EOF)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 42
                self.match(ExprParser.EOF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresiopoligonContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def poligonID(self):
            return self.getTypedRuleContext(ExprParser.PoligonIDContext,0)


        def listvertexs(self):
            return self.getTypedRuleContext(ExprParser.ListvertexsContext,0)


        def operadorspoligons(self):
            return self.getTypedRuleContext(ExprParser.OperadorspoligonsContext,0)


        def operadorspoligons2(self):
            return self.getTypedRuleContext(ExprParser.Operadorspoligons2Context,0)


        def PRIORITYOP(self):
            return self.getToken(ExprParser.PRIORITYOP, 0)

        def PRIORITYEND(self):
            return self.getToken(ExprParser.PRIORITYEND, 0)

        def expresiopoligon(self):
            return self.getTypedRuleContext(ExprParser.ExpresiopoligonContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_expresiopoligon

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpresiopoligon" ):
                return visitor.visitExpresiopoligon(self)
            else:
                return visitor.visitChildren(self)




    def expresiopoligon(self):

        localctx = ExprParser.ExpresiopoligonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expresiopoligon)
        try:
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ExprParser.BOUNDINGBOX, ExprParser.POLI, ExprParser.ASSIGN, ExprParser.LISTSTART, ExprParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 45
                    self.poligonID()
                    pass

                elif la_ == 2:
                    self.state = 46
                    self.listvertexs()
                    pass

                elif la_ == 3:
                    self.state = 47
                    self.operadorspoligons()
                    pass

                elif la_ == 4:
                    self.state = 48
                    self.operadorspoligons2()
                    pass


                pass
            elif token in [ExprParser.PRIORITYOP]:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.match(ExprParser.PRIORITYOP)
                self.state = 57
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 52
                    self.poligonID()
                    pass

                elif la_ == 2:
                    self.state = 53
                    self.listvertexs()
                    pass

                elif la_ == 3:
                    self.state = 54
                    self.operadorspoligons()
                    pass

                elif la_ == 4:
                    self.state = 55
                    self.operadorspoligons2()
                    pass

                elif la_ == 5:
                    self.state = 56
                    self.expresiopoligon()
                    pass


                self.state = 59
                self.match(ExprParser.PRIORITYEND)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VertexdefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.INT)
            else:
                return self.getToken(ExprParser.INT, i)

        def FLOAT(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.FLOAT)
            else:
                return self.getToken(ExprParser.FLOAT, i)

        def getRuleIndex(self):
            return ExprParser.RULE_vertexdef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVertexdef" ):
                return visitor.visitVertexdef(self)
            else:
                return visitor.visitChildren(self)




    def vertexdef(self):

        localctx = ExprParser.VertexdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vertexdef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            _la = self._input.LA(1)
            if not(_la==ExprParser.INT or _la==ExprParser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 64
            _la = self._input.LA(1)
            if not(_la==ExprParser.INT or _la==ExprParser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListvertexsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LISTSTART(self):
            return self.getToken(ExprParser.LISTSTART, 0)

        def LISTEND(self):
            return self.getToken(ExprParser.LISTEND, 0)

        def vertexdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.VertexdefContext)
            else:
                return self.getTypedRuleContext(ExprParser.VertexdefContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_listvertexs

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListvertexs" ):
                return visitor.visitListvertexs(self)
            else:
                return visitor.visitChildren(self)




    def listvertexs(self):

        localctx = ExprParser.ListvertexsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_listvertexs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(ExprParser.LISTSTART)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ExprParser.INT or _la==ExprParser.FLOAT:
                self.state = 67
                self.vertexdef()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 73
            self.match(ExprParser.LISTEND)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NewpolyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def poligonID(self):
            return self.getTypedRuleContext(ExprParser.PoligonIDContext,0)


        def ASSIGN(self):
            return self.getToken(ExprParser.ASSIGN, 0)

        def expresiopoligon(self):
            return self.getTypedRuleContext(ExprParser.ExpresiopoligonContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_newpoly

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewpoly" ):
                return visitor.visitNewpoly(self)
            else:
                return visitor.visitChildren(self)




    def newpoly(self):

        localctx = ExprParser.NewpolyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_newpoly)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.poligonID()
            self.state = 76
            self.match(ExprParser.ASSIGN)
            self.state = 77
            self.expresiopoligon()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssigncolorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLOR(self):
            return self.getToken(ExprParser.COLOR, 0)

        def expresiopoligon(self):
            return self.getTypedRuleContext(ExprParser.ExpresiopoligonContext,0)


        def COMA(self):
            return self.getToken(ExprParser.COMA, 0)

        def colorvalues(self):
            return self.getTypedRuleContext(ExprParser.ColorvaluesContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_assigncolor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssigncolor" ):
                return visitor.visitAssigncolor(self)
            else:
                return visitor.visitChildren(self)




    def assigncolor(self):

        localctx = ExprParser.AssigncolorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assigncolor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(ExprParser.COLOR)
            self.state = 80
            self.expresiopoligon()
            self.state = 81
            self.match(ExprParser.COMA)
            self.state = 82
            self.colorvalues()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperaciopoligonsimpleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PERIMETER(self):
            return self.getToken(ExprParser.PERIMETER, 0)

        def expresiopoligon(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExpresiopoligonContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExpresiopoligonContext,i)


        def EQUAL(self):
            return self.getToken(ExprParser.EQUAL, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMA)
            else:
                return self.getToken(ExprParser.COMA, i)

        def INSIDE(self):
            return self.getToken(ExprParser.INSIDE, 0)

        def AREA(self):
            return self.getToken(ExprParser.AREA, 0)

        def PRINT(self):
            return self.getToken(ExprParser.PRINT, 0)

        def CENTROID(self):
            return self.getToken(ExprParser.CENTROID, 0)

        def VERTICES(self):
            return self.getToken(ExprParser.VERTICES, 0)

        def DRAW(self):
            return self.getToken(ExprParser.DRAW, 0)

        def TXT(self):
            return self.getToken(ExprParser.TXT, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_operaciopoligonsimple

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperaciopoligonsimple" ):
                return visitor.visitOperaciopoligonsimple(self)
            else:
                return visitor.visitChildren(self)




    def operaciopoligonsimple(self):

        localctx = ExprParser.OperaciopoligonsimpleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_operaciopoligonsimple)
        self._la = 0 # Token type
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ExprParser.PERIMETER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.match(ExprParser.PERIMETER)
                self.state = 85
                self.expresiopoligon()
                pass
            elif token in [ExprParser.EQUAL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.match(ExprParser.EQUAL)
                self.state = 87
                self.expresiopoligon()
                self.state = 88
                self.match(ExprParser.COMA)
                self.state = 89
                self.expresiopoligon()
                pass
            elif token in [ExprParser.INSIDE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.match(ExprParser.INSIDE)
                self.state = 92
                self.expresiopoligon()
                self.state = 93
                self.match(ExprParser.COMA)
                self.state = 94
                self.expresiopoligon()
                pass
            elif token in [ExprParser.AREA]:
                self.enterOuterAlt(localctx, 4)
                self.state = 96
                self.match(ExprParser.AREA)
                self.state = 97
                self.expresiopoligon()
                pass
            elif token in [ExprParser.PRINT]:
                self.enterOuterAlt(localctx, 5)
                self.state = 98
                self.match(ExprParser.PRINT)
                self.state = 99
                self.expresiopoligon()
                pass
            elif token in [ExprParser.CENTROID]:
                self.enterOuterAlt(localctx, 6)
                self.state = 100
                self.match(ExprParser.CENTROID)
                self.state = 101
                self.expresiopoligon()
                pass
            elif token in [ExprParser.VERTICES]:
                self.enterOuterAlt(localctx, 7)
                self.state = 102
                self.match(ExprParser.VERTICES)
                self.state = 103
                self.expresiopoligon()
                pass
            elif token in [ExprParser.DRAW]:
                self.enterOuterAlt(localctx, 8)
                self.state = 104
                self.match(ExprParser.DRAW)
                self.state = 105
                self.match(ExprParser.TXT)
                self.state = 106
                self.match(ExprParser.COMA)
                self.state = 107
                self.expresiopoligon()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==ExprParser.COMA:
                    self.state = 108
                    self.match(ExprParser.COMA)
                    self.state = 109
                    self.expresiopoligon()
                    self.state = 114
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrinttxtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(ExprParser.PRINT, 0)

        def TXT(self):
            return self.getToken(ExprParser.TXT, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_printtxt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrinttxt" ):
                return visitor.visitPrinttxt(self)
            else:
                return visitor.visitChildren(self)




    def printtxt(self):

        localctx = ExprParser.PrinttxtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_printtxt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(ExprParser.PRINT)
            self.state = 118
            self.match(ExprParser.TXT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperadorspoligonsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def poligonID(self):
            return self.getTypedRuleContext(ExprParser.PoligonIDContext,0)


        def UNION(self):
            return self.getToken(ExprParser.UNION, 0)

        def expresiopoligon(self):
            return self.getTypedRuleContext(ExprParser.ExpresiopoligonContext,0)


        def INTERSECTION(self):
            return self.getToken(ExprParser.INTERSECTION, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_operadorspoligons

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperadorspoligons" ):
                return visitor.visitOperadorspoligons(self)
            else:
                return visitor.visitChildren(self)




    def operadorspoligons(self):

        localctx = ExprParser.OperadorspoligonsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_operadorspoligons)
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.poligonID()
                self.state = 121
                self.match(ExprParser.UNION)
                self.state = 122
                self.expresiopoligon()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.poligonID()
                self.state = 125
                self.match(ExprParser.INTERSECTION)
                self.state = 126
                self.expresiopoligon()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Operadorspoligons2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOUNDINGBOX(self):
            return self.getToken(ExprParser.BOUNDINGBOX, 0)

        def expresiopoligon(self):
            return self.getTypedRuleContext(ExprParser.ExpresiopoligonContext,0)


        def POLI(self):
            return self.getToken(ExprParser.POLI, 0)

        def ASSIGN(self):
            return self.getToken(ExprParser.ASSIGN, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_operadorspoligons2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperadorspoligons2" ):
                return visitor.visitOperadorspoligons2(self)
            else:
                return visitor.visitChildren(self)




    def operadorspoligons2(self):

        localctx = ExprParser.Operadorspoligons2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_operadorspoligons2)
        try:
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ExprParser.BOUNDINGBOX]:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(ExprParser.BOUNDINGBOX)
                self.state = 131
                self.expresiopoligon()
                pass
            elif token in [ExprParser.POLI]:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(ExprParser.POLI)
                self.state = 133
                self.expresiopoligon()
                pass
            elif token in [ExprParser.ASSIGN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 134
                self.match(ExprParser.ASSIGN)
                self.state = 135
                self.expresiopoligon()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColorvaluesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLORSTART(self):
            return self.getToken(ExprParser.COLORSTART, 0)

        def COLOREND(self):
            return self.getToken(ExprParser.COLOREND, 0)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.INT)
            else:
                return self.getToken(ExprParser.INT, i)

        def FLOAT(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.FLOAT)
            else:
                return self.getToken(ExprParser.FLOAT, i)

        def getRuleIndex(self):
            return ExprParser.RULE_colorvalues

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColorvalues" ):
                return visitor.visitColorvalues(self)
            else:
                return visitor.visitChildren(self)




    def colorvalues(self):

        localctx = ExprParser.ColorvaluesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_colorvalues)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(ExprParser.COLORSTART)
            self.state = 139
            _la = self._input.LA(1)
            if not(_la==ExprParser.INT or _la==ExprParser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 140
            _la = self._input.LA(1)
            if not(_la==ExprParser.INT or _la==ExprParser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 141
            _la = self._input.LA(1)
            if not(_la==ExprParser.INT or _la==ExprParser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 142
            self.match(ExprParser.COLOREND)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PoligonIDContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_poligonID

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPoligonID" ):
                return visitor.visitPoligonID(self)
            else:
                return visitor.visitChildren(self)




    def poligonID(self):

        localctx = ExprParser.PoligonIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_poligonID)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(ExprParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





